2003-01-07  Fumitoshi UKAI  <ukai@debian.or.jp>

	* fix build warnings
	* url.c (parseURL2): fix comparison between pointer and integer
	* news.c (readNewsgroup): variable `scheme',`group',`list' might be clobbered by `longjmp' or `vfork'

2003-01-07  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03610] Re: news:<newsgroup>
	* anchor.c (_put_anchor_news): check '<'
		(reAnchorNewsheader): added
	* file.c (loadSomething): Subject: as buffername
		(checkHeader): check buf->document_header
		(loadGeneralFile): reAnchorNewsheader
	* html.h (SCM_NNTP_GROUP): added
	* main.c (main): delete USE_NNTP in switch (newbuf->real_scheme)
		(chkNMIDBuffer): lowercase in url_like_pat
	* news.c (add_news_message): add scheme, group as arg
		(openNewsStream): check SCM_NNTP_GROUP
				check current_news.host
		(readNewsgroup): rewrite to support nntp:,news: extension
	* proto.h (reAnchorNewsheader): added
	* url.c (DefaultPort): add 119 for nntp group
		(parseURL2): rewrite to support nntp:,news: extension
		(_parsedURL2Str): add for SCM_NNTP_GROUP
		(openURL): rewrite to support nntp:,news: extension

2002-12-28  Fumitoshi UKAI  <ukai@debian.or.jp>

	* fix build errors
	* display.c (make_lastline_message): fix error for undef JP_CHARSET
	* news.c (readNewsgroup: `code' always required

	* gcc -Wall -Werror clean
	* file.c (loadHTMLstream): unused variable `p'
	* news.c (news_command): unused variable `c'
		(news_open): unused variable `tmp'
		(readNewsgroup): volatile page, qgroup, flag, start, end
				uninitialized variable `page'
	* url.c (openURL): unused variable `fw', `r', `stream'

2002-12-28  Fumitoshi UKAI  <ukai@debian.or.jp>

	* rc: nntpserver, nntpmode, max_news

2002-12-28  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03608] news:<newsgroup>
	* XMakefile (LSRCS): add news.c
		(LOBJS): add news.o
	* file.c (loadSOmething): don't UFclose() for nntp/news
		(readHeader): remove . at beginning of line for news
			img link to file: