@@ -1,3 +1,11 @@
+2003-01-08  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03611] relative URL
+	* news.c (openNewsStream): don't skip '/' for nntp:
+		(readNewsgroup): cleanup
+	* url.c (parseURL): don't copy user & password
+		(parseURL2): fix for group, don't copy user & password
+
 2003-01-07  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* fix build warnings
@@ -6184,4 +6192,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.657 2003/01/06 15:49:28 ukai Exp $
+$Id: ChangeLog,v 1.658 2003/01/07 15:53:42 ukai Exp $
